src/main/webapp/resources/css/mobile/global.css
/*
 * JBoss, Home of Professional Open Source
 * Copyright 2011, Red Hat, Inc. and individual contributors
 * by the @authors tag. See the copyright.txt in the distribution for a
 * full listing of individual contributors.
 *
 * This is free software; you can redistribute it and/or modify it
 * under the terms of the GNU Lesser General Public License as
 * published by the Free Software Foundation; either version 2.1 of
 * the License, or (at your option) any later version.
 *
 * This software is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this software; if not, write to the Free
 * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
 * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
 */

/* author Wesley Hales | whales@redhat.com */

html {
    height: 100%;
}

body {
    margin: 0;
    padding: 0;
    height: 100%;
    font: 1.2em "Lucida Sans Unicode", "Lucida Grande", Geneva, Verdana, Arial, sans-serif;
    /*width:100%;*/

}

a {
    text-decoration: none;
}

/*************************************************
Mobile Device Page Setup
*************************************************/

#browser {
    /*background: #000 -moz-linear-gradient(top, #0e0e0e, #313131);*/
    /*background: #000 -webkit-gradient(linear, left top, left bottom, from(#0e0e0e), to(#313131));*/
    position: relative;
    width: 100%;
}

#page-container {
    position:absolute;
    top: 44px;
    width:100%;
    height: 100%;
}

.page {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    /*activate the GPU for compositing each page */
    -webkit-transform: translate3d(0, 0, 0);
}

/*************************************************
UX Utils
*************************************************/

.stage-center {
    left: 0;
}

.none {
    display: none
}

.hide-it {
    opacity: 0;
}

.show {
    opacity: 100;
}

.transition {
    -moz-transition-duration: .5s;
    -webkit-transition-duration: .5s;
    -o-transition-duration: .5s;
}

/*************************************************
Flip Transition
*************************************************/

#back,
#front {
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden;
    -webkit-transition-duration: .5s;
    -webkit-transform-style: preserve-3d;
}

.normal {
    -webkit-transform: rotateY(0deg);
}

.flipped {
    -webkit-user-select: element;
    -webkit-transform: rotateY(180deg);
}

/*************************************************
Device Specific Styles
*************************************************/

.stage-left,
.stage-right{
    width:1px;
    height:1024px;
    overflow: hidden;
}
/* iOS/android phone landscape screen width*/
@media screen and (max-device-width: 480px) and (orientation:landscape) {
    .stage-left {
        left: -480px;
    }

    .stage-right {
        left: 480px;
    }

    .page {
        width: 480px;
    }

}

/* iOS/android phone portrait screen width*/
@media screen and (max-device-width: 320px) and (orientation:portrait) {
    .stage-left {
        left: -320px;
    }

    .stage-right {
        left: 320px;
    }

    .page {
        width: 320px;
    }
}

/*catch all for at or larger than handheld landscape device widths*/
@media screen and (min-device-width: 481px) {
    .stage-left {
        left: -1024px;
    }

    .stage-right {
        left: 1024px;
    }

    .page {

    }
}

/*************************************************
Page Formatting - Skin
*************************************************/

/*Custom Buttons and bars*/
.left-header-button {
   font-weight: bold;
   font-size: 12px;
   color: #fff;
   text-shadow: rgba(0, 0, 0, 0.6) 0px -1px 0px;
   text-align: center;
   text-overflow: ellipsis;
   height: 30px;
   width: 60px;
   position: absolute;
   top: 7px;
   left: 5px;
   line-height: 30px;
}

.right-header-button {
   font-weight: bold;
   font-size: 12px;
   color: #fff;
   text-shadow: rgba(0, 0, 0, 0.6) 0px -1px 0px;
   text-align: center;
   text-overflow: ellipsis;
   height: 30px;
   width: 60px;
   position: absolute;
   top: 7px;
   right: 5px;
   line-height: 30px;
}

.basic-button {
   background: #000 -moz-linear-gradient(90deg, rgba(0, 0, 0, .3) 33%, rgba(255, 255, 255, .1) 123%);
   background: #000 -webkit-gradient(linear, left top, left bottom, from(#717172), to(#0f0f10), color-stop(0.5, #3a3a3a), color-stop(0.5, #0d0d0f));
   border-radius: 7px;
   mozborder-radius: 7px;
   webkitborder-radius: 7px;
   border: none;

}

.hide-button {
    display:none;
    opacity: 0;
}

div#browser > header > div {
   position: relative;
   height: 44px;
   width: auto;
   font-weight: bold;
   color: #fff;
   text-shadow: rgba(0, 0, 0, 0.6) 0px -1px 0px;
   text-align: center;
   line-height: 47px;
   background: #1d2f3d -moz-linear-gradient(90deg, #1d2f3d 33%, #375c79 123%);
   background: #1d2f3d -webkit-gradient(linear, left top, left bottom, from(#375c79), to(#1d2f3d));
   border: none;
}

body > header > div img.logo {
    margin: 0 auto;
}

.nav-list {
   width: 95%;
   margin: 0 auto 0 auto;
   padding:  5px;
}

#component-page fieldset.example-cnt > p {
    font: .8em "Lucida Sans Unicode", "Lucida Grande", Geneva, Verdana, Arial, sans-serif;
    background: #1d2f3d -moz-linear-gradient(90deg, #FAFAFA 33%, #F5F5F5 123%);
    background: #1d2f3d -webkit-gradient(linear, left top, left bottom, from(#FAFAFA), to(#F5F5F5));
    border: 1px solid #E0E0E0;
    border-radius: 8px;
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    padding:  5px;
    margin:  5px;
}

#component-page > div {
    padding:  10px;
}
/* ... */

